parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stm
Rule 2     program -> stm SEMICOL program
Rule 3     stm -> PRINT LPAREN exp RPAREN
Rule 4     stm -> exp
Rule 5     stm -> varStore EQUALS exp
Rule 6     exp -> LPAREN exp RPAREN
Rule 7     exp -> varLoad
Rule 8     exp -> validity
Rule 9     exp -> conditioning
Rule 10    exp -> state
Rule 11    exp -> stateExp
Rule 12    exp -> predicate
Rule 13    exp -> predicateExp
Rule 14    exp -> channel
Rule 15    exp -> channelExp
Rule 16    exp -> stateTransformation
Rule 17    exp -> predicateTransformation
Rule 18    exp -> builtin_function
Rule 19    varLoad -> NAME
Rule 20    varStore -> NAME
Rule 21    validity -> exp VALIDITY exp
Rule 22    conditioning -> exp CONDITIONING exp
Rule 23    stateTransformation -> exp R_A_PAREN exp
Rule 24    predicateTransformation -> exp L_A_PAREN exp
Rule 25    state -> L_S_PAREN stateBody R_S_PAREN
Rule 26    stateBody -> stateElem PLUS stateBody
Rule 27    stateBody -> stateElem
Rule 28    stateElem -> PROBABILITY_VALUE PIPE nameOrBool optionKET
Rule 29    nameOrBool -> name
Rule 30    nameOrBool -> string
Rule 31    nameOrBool -> boolean
Rule 32    name -> NAME
Rule 33    string -> STRING
Rule 34    boolean -> TRUE
Rule 35    boolean -> FALSE
Rule 36    optionKET -> KET
Rule 37    optionKET -> empty
Rule 38    stateExp -> exp MARGINAL dimensionSel
Rule 39    dimensionSel -> L_S_PAREN dimensionSelBody R_S_PAREN
Rule 40    dimensionSelBody -> dimensionSelElem COMMA dimensionSelBody
Rule 41    dimensionSelBody -> dimensionSelElem
Rule 42    dimensionSelElem -> BIT
Rule 43    predicate -> L_B_PAREN predicateBody R_B_PAREN
Rule 44    predicateBody -> predicateElem COMMA predicateBody
Rule 45    predicateBody -> predicateElem
Rule 46    predicateElem -> nameOrBool COLON PROBABILITY_VALUE
Rule 47    predicateExp -> exp CROSS exp
Rule 48    predicateExp -> exp AND exp
Rule 49    predicateExp -> exp PLUS exp
Rule 50    predicateExp -> exp PIPE exp
Rule 51    predicateExp -> PROBABILITY_VALUE STAR exp
Rule 52    predicateExp -> NEGATE exp
Rule 53    channel -> L_A_PAREN matrice COMMA domcod COMMA domcod R_A_PAREN
Rule 54    matrice -> L_S_PAREN righe R_S_PAREN
Rule 55    righe -> riga COMMA righe
Rule 56    righe -> riga
Rule 57    riga -> L_S_PAREN riga_values R_S_PAREN
Rule 58    riga_values -> PROBABILITY_VALUE
Rule 59    riga_values -> PROBABILITY_VALUE COMMA riga_values
Rule 60    channelExp -> exp STAR exp
Rule 61    domcod -> L_S_PAREN domcod_values R_S_PAREN
Rule 62    domcod_values -> nameOrBool
Rule 63    domcod_values -> nameOrBool COMMA domcod_values
Rule 64    builtin_function -> FLIP LPAREN PROBABILITY_VALUE RPAREN
Rule 65    builtin_function -> UNIFORM_STATE LPAREN domcod_values RPAREN
Rule 66    builtin_function -> RANDOM_STATE LPAREN domcod_values RPAREN
Rule 67    builtin_function -> FALSITY LPAREN domcod_values RPAREN
Rule 68    builtin_function -> COPY LPAREN domcod_values RPAREN
Rule 69    builtin_function -> IDN LPAREN domcod_values RPAREN
Rule 70    builtin_function -> SWAP LPAREN domcod COMMA domcod RPAREN
Rule 71    builtin_function -> CPT LPAREN riga_values RPAREN
Rule 72    builtin_function -> TRUTH LPAREN domcod_values RPAREN
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
BIT                  : 42
COLON                : 46
COMMA                : 40 44 53 53 55 59 63 70
CONDITIONING         : 22
COPY                 : 68
CPT                  : 71
CROSS                : 47
EQUALS               : 5
FALSE                : 35
FALSITY              : 67
FLIP                 : 64
IDN                  : 69
KET                  : 36
LPAREN               : 3 6 64 65 66 67 68 69 70 71 72
L_A_PAREN            : 24 53
L_B_PAREN            : 43
L_S_PAREN            : 25 39 54 57 61
MARGINAL             : 38
NAME                 : 19 20 32
NEGATE               : 52
PIPE                 : 28 50
PLUS                 : 26 49
PRINT                : 3
PROBABILITY_VALUE    : 28 46 51 58 59 64
RANDOM_STATE         : 66
RPAREN               : 3 6 64 65 66 67 68 69 70 71 72
R_A_PAREN            : 23 53
R_B_PAREN            : 43
R_S_PAREN            : 25 39 54 57 61
SEMICOL              : 2
STAR                 : 51 60
STRING               : 33
SWAP                 : 70
TRUE                 : 34
TRUTH                : 72
UNIFORM_STATE        : 65
VALIDITY             : 21
error                : 

Nonterminals, with rules where they appear

boolean              : 31
builtin_function     : 18
channel              : 14
channelExp           : 15
conditioning         : 9
dimensionSel         : 38
dimensionSelBody     : 39 40
dimensionSelElem     : 40 41
domcod               : 53 53 70 70
domcod_values        : 61 63 65 66 67 68 69 72
empty                : 37
exp                  : 3 4 5 6 21 21 22 22 23 23 24 24 38 47 47 48 48 49 49 50 50 51 52 60 60
matrice              : 53
name                 : 29
nameOrBool           : 28 46 62 63
optionKET            : 28
predicate            : 12
predicateBody        : 43 44
predicateElem        : 44 45
predicateExp         : 13
predicateTransformation : 17
program              : 2 0
riga                 : 55 56
riga_values          : 57 59 71
righe                : 54 55
state                : 10
stateBody            : 25 26
stateElem            : 26 27
stateExp             : 11
stateTransformation  : 16
stm                  : 1 2
string               : 30
validity             : 8
varLoad              : 7
varStore             : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stm
    (2) program -> . stm SEMICOL program
    (3) stm -> . PRINT LPAREN exp RPAREN
    (4) stm -> . exp
    (5) stm -> . varStore EQUALS exp
    (6) exp -> . LPAREN exp RPAREN
    (7) exp -> . varLoad
    (8) exp -> . validity
    (9) exp -> . conditioning
    (10) exp -> . state
    (11) exp -> . stateExp
    (12) exp -> . predicate
    (13) exp -> . predicateExp
    (14) exp -> . channel
    (15) exp -> . channelExp
    (16) exp -> . stateTransformation
    (17) exp -> . predicateTransformation
    (18) exp -> . builtin_function
    (20) varStore -> . NAME
    (19) varLoad -> . NAME
    (21) validity -> . exp VALIDITY exp
    (22) conditioning -> . exp CONDITIONING exp
    (25) state -> . L_S_PAREN stateBody R_S_PAREN
    (38) stateExp -> . exp MARGINAL dimensionSel
    (43) predicate -> . L_B_PAREN predicateBody R_B_PAREN
    (47) predicateExp -> . exp CROSS exp
    (48) predicateExp -> . exp AND exp
    (49) predicateExp -> . exp PLUS exp
    (50) predicateExp -> . exp PIPE exp
    (51) predicateExp -> . PROBABILITY_VALUE STAR exp
    (52) predicateExp -> . NEGATE exp
    (53) channel -> . L_A_PAREN matrice COMMA domcod COMMA domcod R_A_PAREN
    (60) channelExp -> . exp STAR exp
    (23) stateTransformation -> . exp R_A_PAREN exp
    (24) predicateTransformation -> . exp L_A_PAREN exp
    (64) builtin_function -> . FLIP LPAREN PROBABILITY_VALUE RPAREN
    (65) builtin_function -> . UNIFORM_STATE LPAREN domcod_values RPAREN
    (66) builtin_function -> . RANDOM_STATE LPAREN domcod_values RPAREN
    (67) builtin_function -> . FALSITY LPAREN domcod_values RPAREN
    (68) builtin_function -> . COPY LPAREN domcod_values RPAREN
    (69) builtin_function -> . IDN LPAREN domcod_values RPAREN
    (70) builtin_function -> . SWAP LPAREN domcod COMMA domcod RPAREN
    (71) builtin_function -> . CPT LPAREN riga_values RPAREN
    (72) builtin_function -> . TRUTH LPAREN domcod_values RPAREN

    PRINT           shift and go to state 33
    LPAREN          shift and go to state 22
    NAME            shift and go to state 28
    L_S_PAREN       shift and go to state 23
    L_B_PAREN       shift and go to state 19
    PROBABILITY_VALUE shift and go to state 30
    NEGATE          shift and go to state 14
    L_A_PAREN       shift and go to state 26
    FLIP            shift and go to state 6
    UNIFORM_STATE   shift and go to state 27
    RANDOM_STATE    shift and go to state 18
    FALSITY         shift and go to state 16
    COPY            shift and go to state 3
    IDN             shift and go to state 20
    SWAP            shift and go to state 13
    CPT             shift and go to state 5
    TRUTH           shift and go to state 29

    channelExp                     shift and go to state 17
    builtin_function               shift and go to state 21
    stateExp                       shift and go to state 1
    predicate                      shift and go to state 4
    validity                       shift and go to state 2
    exp                            shift and go to state 7
    predicateTransformation        shift and go to state 24
    state                          shift and go to state 25
    program                        shift and go to state 8
    predicateExp                   shift and go to state 9
    channel                        shift and go to state 10
    conditioning                   shift and go to state 11
    stm                            shift and go to state 12
    stateTransformation            shift and go to state 31
    varStore                       shift and go to state 15
    varLoad                        shift and go to state 32

state 1

    (11) exp -> stateExp .

    VALIDITY        reduce using rule 11 (exp -> stateExp .)
    CONDITIONING    reduce using rule 11 (exp -> stateExp .)
    MARGINAL        reduce using rule 11 (exp -> stateExp .)
    CROSS           reduce using rule 11 (exp -> stateExp .)
    AND             reduce using rule 11 (exp -> stateExp .)
    PLUS            reduce using rule 11 (exp -> stateExp .)
    PIPE            reduce using rule 11 (exp -> stateExp .)
    STAR            reduce using rule 11 (exp -> stateExp .)
    R_A_PAREN       reduce using rule 11 (exp -> stateExp .)
    L_A_PAREN       reduce using rule 11 (exp -> stateExp .)
    SEMICOL         reduce using rule 11 (exp -> stateExp .)
    $end            reduce using rule 11 (exp -> stateExp .)
    RPAREN          reduce using rule 11 (exp -> stateExp .)


state 2

    (8) exp -> validity .

    VALIDITY        reduce using rule 8 (exp -> validity .)
    CONDITIONING    reduce using rule 8 (exp -> validity .)
    MARGINAL        reduce using rule 8 (exp -> validity .)
    CROSS           reduce using rule 8 (exp -> validity .)
    AND             reduce using rule 8 (exp -> validity .)
    PLUS            reduce using rule 8 (exp -> validity .)
    PIPE            reduce using rule 8 (exp -> validity .)
    STAR            reduce using rule 8 (exp -> validity .)
    R_A_PAREN       reduce using rule 8 (exp -> validity .)
    L_A_PAREN       reduce using rule 8 (exp -> validity .)
    SEMICOL         reduce using rule 8 (exp -> validity .)
    $end            reduce using rule 8 (exp -> validity .)
    RPAREN          reduce using rule 8 (exp -> validity .)


state 3

    (68) builtin_function -> COPY . LPAREN domcod_values RPAREN

    LPAREN          shift and go to state 34


state 4

    (12) exp -> predicate .

    VALIDITY        reduce using rule 12 (exp -> predicate .)
    CONDITIONING    reduce using rule 12 (exp -> predicate .)
    MARGINAL        reduce using rule 12 (exp -> predicate .)
    CROSS           reduce using rule 12 (exp -> predicate .)
    AND             reduce using rule 12 (exp -> predicate .)
    PLUS            reduce using rule 12 (exp -> predicate .)
    PIPE            reduce using rule 12 (exp -> predicate .)
    STAR            reduce using rule 12 (exp -> predicate .)
    R_A_PAREN       reduce using rule 12 (exp -> predicate .)
    L_A_PAREN       reduce using rule 12 (exp -> predicate .)
    SEMICOL         reduce using rule 12 (exp -> predicate .)
    $end            reduce using rule 12 (exp -> predicate .)
    RPAREN          reduce using rule 12 (exp -> predicate .)


state 5

    (71) builtin_function -> CPT . LPAREN riga_values RPAREN

    LPAREN          shift and go to state 35


state 6

    (64) builtin_function -> FLIP . LPAREN PROBABILITY_VALUE RPAREN

    LPAREN          shift and go to state 36


state 7

    (4) stm -> exp .
    (21) validity -> exp . VALIDITY exp
    (22) conditioning -> exp . CONDITIONING exp
    (38) stateExp -> exp . MARGINAL dimensionSel
    (47) predicateExp -> exp . CROSS exp
    (48) predicateExp -> exp . AND exp
    (49) predicateExp -> exp . PLUS exp
    (50) predicateExp -> exp . PIPE exp
    (60) channelExp -> exp . STAR exp
    (23) stateTransformation -> exp . R_A_PAREN exp
    (24) predicateTransformation -> exp . L_A_PAREN exp

    SEMICOL         reduce using rule 4 (stm -> exp .)
    $end            reduce using rule 4 (stm -> exp .)
    VALIDITY        shift and go to state 37
    CONDITIONING    shift and go to state 40
    MARGINAL        shift and go to state 43
    CROSS           shift and go to state 42
    AND             shift and go to state 44
    PLUS            shift and go to state 46
    PIPE            shift and go to state 38
    STAR            shift and go to state 41
    R_A_PAREN       shift and go to state 45
    L_A_PAREN       shift and go to state 39


state 8

    (0) S' -> program .



state 9

    (13) exp -> predicateExp .

    VALIDITY        reduce using rule 13 (exp -> predicateExp .)
    CONDITIONING    reduce using rule 13 (exp -> predicateExp .)
    MARGINAL        reduce using rule 13 (exp -> predicateExp .)
    CROSS           reduce using rule 13 (exp -> predicateExp .)
    AND             reduce using rule 13 (exp -> predicateExp .)
    PLUS            reduce using rule 13 (exp -> predicateExp .)
    PIPE            reduce using rule 13 (exp -> predicateExp .)
    STAR            reduce using rule 13 (exp -> predicateExp .)
    R_A_PAREN       reduce using rule 13 (exp -> predicateExp .)
    L_A_PAREN       reduce using rule 13 (exp -> predicateExp .)
    SEMICOL         reduce using rule 13 (exp -> predicateExp .)
    $end            reduce using rule 13 (exp -> predicateExp .)
    RPAREN          reduce using rule 13 (exp -> predicateExp .)


state 10

    (14) exp -> channel .

    VALIDITY        reduce using rule 14 (exp -> channel .)
    CONDITIONING    reduce using rule 14 (exp -> channel .)
    MARGINAL        reduce using rule 14 (exp -> channel .)
    CROSS           reduce using rule 14 (exp -> channel .)
    AND             reduce using rule 14 (exp -> channel .)
    PLUS            reduce using rule 14 (exp -> channel .)
    PIPE            reduce using rule 14 (exp -> channel .)
    STAR            reduce using rule 14 (exp -> channel .)
    R_A_PAREN       reduce using rule 14 (exp -> channel .)
    L_A_PAREN       reduce using rule 14 (exp -> channel .)
    SEMICOL         reduce using rule 14 (exp -> channel .)
    $end            reduce using rule 14 (exp -> channel .)
    RPAREN          reduce using rule 14 (exp -> channel .)


state 11

    (9) exp -> conditioning .

    VALIDITY        reduce using rule 9 (exp -> conditioning .)
    CONDITIONING    reduce using rule 9 (exp -> conditioning .)
    MARGINAL        reduce using rule 9 (exp -> conditioning .)
    CROSS           reduce using rule 9 (exp -> conditioning .)
    AND             reduce using rule 9 (exp -> conditioning .)
    PLUS            reduce using rule 9 (exp -> conditioning .)
    PIPE            reduce using rule 9 (exp -> conditioning .)
    STAR            reduce using rule 9 (exp -> conditioning .)
    R_A_PAREN       reduce using rule 9 (exp -> conditioning .)
    L_A_PAREN       reduce using rule 9 (exp -> conditioning .)
    SEMICOL         reduce using rule 9 (exp -> conditioning .)
    $end            reduce using rule 9 (exp -> conditioning .)
    RPAREN          reduce using rule 9 (exp -> conditioning .)


state 12

    (1) program -> stm .
    (2) program -> stm . SEMICOL program

    $end            reduce using rule 1 (program -> stm .)
    SEMICOL         shift and go to state 47


state 13

    (70) builtin_function -> SWAP . LPAREN domcod COMMA domcod RPAREN

    LPAREN          shift and go to state 48


state 14

    (52) predicateExp -> NEGATE . exp
    (6) exp -> . LPAREN exp RPAREN
    (7) exp -> . varLoad
    (8) exp -> . validity
    (9) exp -> . conditioning
    (10) exp -> . state
    (11) exp -> . stateExp
    (12) exp -> . predicate
    (13) exp -> . predicateExp
    (14) exp -> . channel
    (15) exp -> . channelExp
    (16) exp -> . stateTransformation
    (17) exp -> . predicateTransformation
    (18) exp -> . builtin_function
    (19) varLoad -> . NAME
    (21) validity -> . exp VALIDITY exp
    (22) conditioning -> . exp CONDITIONING exp
    (25) state -> . L_S_PAREN stateBody R_S_PAREN
    (38) stateExp -> . exp MARGINAL dimensionSel
    (43) predicate -> . L_B_PAREN predicateBody R_B_PAREN
    (47) predicateExp -> . exp CROSS exp
    (48) predicateExp -> . exp AND exp
    (49) predicateExp -> . exp PLUS exp
    (50) predicateExp -> . exp PIPE exp
    (51) predicateExp -> . PROBABILITY_VALUE STAR exp
    (52) predicateExp -> . NEGATE exp
    (53) channel -> . L_A_PAREN matrice COMMA domcod COMMA domcod R_A_PAREN
    (60) channelExp -> . exp STAR exp
    (23) stateTransformation -> . exp R_A_PAREN exp
    (24) predicateTransformation -> . exp L_A_PAREN exp
    (64) builtin_function -> . FLIP LPAREN PROBABILITY_VALUE RPAREN
    (65) builtin_function -> . UNIFORM_STATE LPAREN domcod_values RPAREN
    (66) builtin_function -> . RANDOM_STATE LPAREN domcod_values RPAREN
    (67) builtin_function -> . FALSITY LPAREN domcod_values RPAREN
    (68) builtin_function -> . COPY LPAREN domcod_values RPAREN
    (69) builtin_function -> . IDN LPAREN domcod_values RPAREN
    (70) builtin_function -> . SWAP LPAREN domcod COMMA domcod RPAREN
    (71) builtin_function -> . CPT LPAREN riga_values RPAREN
    (72) builtin_function -> . TRUTH LPAREN domcod_values RPAREN

    LPAREN          shift and go to state 22
    NAME            shift and go to state 50
    L_S_PAREN       shift and go to state 23
    L_B_PAREN       shift and go to state 19
    PROBABILITY_VALUE shift and go to state 30
    NEGATE          shift and go to state 14
    L_A_PAREN       shift and go to state 26
    FLIP            shift and go to state 6
    UNIFORM_STATE   shift and go to state 27
    RANDOM_STATE    shift and go to state 18
    FALSITY         shift and go to state 16
    COPY            shift and go to state 3
    IDN             shift and go to state 20
    SWAP            shift and go to state 13
    CPT             shift and go to state 5
    TRUTH           shift and go to state 29

    predicateTransformation        shift and go to state 24
    channelExp                     shift and go to state 17
    state                          shift and go to state 25
    predicateExp                   shift and go to state 9
    builtin_function               shift and go to state 21
    channel                        shift and go to state 10
    conditioning                   shift and go to state 11
    validity                       shift and go to state 2
    stateExp                       shift and go to state 1
    predicate                      shift and go to state 4
    exp                            shift and go to state 49
    stateTransformation            shift and go to state 31
    varLoad                        shift and go to state 32

state 15

    (5) stm -> varStore . EQUALS exp

    EQUALS          shift and go to state 51


state 16

    (67) builtin_function -> FALSITY . LPAREN domcod_values RPAREN

    LPAREN          shift and go to state 52


state 17

    (15) exp -> channelExp .
